# birdwatch

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
app/: pubspec.yaml
app/lib/: main.dart
app/lib/models/: detection.dart
app/lib/screens/: detection_detail_screen.dart  detection_list_screen.dart  home_screen.dart
app/lib/services/: amplify_sync_service.dart  audio_stream_service.dart  ebird_service.dart  inference_service.dart  wikipedia_service.dart
cloud/: package.json
cloud/amplify/: backend.ts
cloud/amplify/auth/: resource.ts
cloud/amplify/data/: resource.ts
cloud/amplify/functions/iot-handler/: handler.ts  resource.ts
cloud/amplify/storage/: resource.ts
cloud/scripts/: deploy-sandbox.sh  iot-setup.md
dev/: PLAN.md  TODO.md
docs/: cloud.md  embedded.md  hardware.md  index.md  mobile.md  model-setup.md  operational.md  plan.md  quickstart.md  user-guide.md
docs/api/: birdwatch.md
scripts/: setup.sh
src/birdwatch/: __init__.py  analyzer.py  mqtt_client.py  recorder.py
src/birdwatch/pi/: __init__.py  main.py
tests/: __init__.py  test_mqtt_client.py  test_recorder.py
tests/e2e/: README.md  __init__.py  test_pi_pipeline.py
